Fixed the problem of the avatar being too large.
After that the code will be re-optimized in the v3.*

--- a/less/forum.less
+++ b/less/forum.less
@@ -83,7 +83,7 @@ span.Avatar.lastPostedUserAvatar,img.Avatar.lastPostedUserAvatar {
 .Hero h2{font-size:25px;font-weight:600}
 .Post-actions{z-index:99}
 .IndexPage .DiscussionListItem{padding:10px 25px}
-.DiscussionListItem-author .Avatar{--size:41px}
+.DiscussionListItem-author .Avatar{--size:38px}
 .DiscussionListItem-info .item-excerpt{margin-right:auto}
 span.Avatar{display:inline-flex;overflow:hidden;font-size:55px;justify-content:center;align-items:center}
 .DiscussionPage .Hero::before,.IndexPage .Hero::before{content:'';position:absolute;top:0;right:0;bottom:0;left:0;background:#0e6d4a0a;background-attachment:fixed;filter:blur(4px);z-index:-1}
